Revert "introduction writing"
This reverts commit 4473be00422439fc73293d0a07c8554a809df900.

--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "by Albina Chowdury, Cesar Cisneros, Estelle Hooper, Eva Ruse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# I. Research Question\n",
     "#### Is there a relationship between how happy a country is and the music the people of this country listen to?"
    ]
@@ -38,27 +31,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction: What measures happiness? Music or life expectancy?<a name=\"introduction\"></a>\n",
-    "Music is widely used to cope with any mood by most individuals across the world. Spotify has taken advantage of music as therapy, generating several playlists related to emotion, such as [Mood Booster](https://open.spotify.com/playlist/37i9dQZF1DX3rxVfibe1L0?si=1ac560999d7f4489) to \"get happy\" and [Life Sucks](https://open.spotify.com/playlist/37i9dQZF1DX3YSRoSdA634?si=ce50da9a976e41d9) for when you feel like \"everything in life sucks.\" In fact, for every song on Spotify, Spotify has calculated individual scores to measure the \"mood\" of the song (danceability, valence, energy, tempo).\n",
+    "### Introduction <a name=\"introduction\"></a>\n",
+    "It is no surprise that music is widely used as coping mechanism for any form of distress by most individuals across the world. Certain genres are often said to lift people's spirits through either the instrumental or lyrical components of a song. Neuroscientists have attributed songs like \"Don't Stop Me Now\" by Queen and \"Dancing Queen\" by Abba as some of the happiest songs. Indeed, Spotify has thousands of playlists with titles like \"Happy Days,\" \"Happy Hits,\" Just Smile Happy Songs,\" and \"Happy Songs to Sing in The Car\" with the goal of increasing mental health awareness and people's moods. \n",
     "\n",
-    "According to the Sustainable Development Solutions Network (SDSN, an initiative launched by the United Nations), a *country's* happiness can be calculated by economic production , life expectancy, freedom, and more. Though the music the people of said country listen to is obviously not one of these factors, we are more interested in discovering if there are any notable differences between popular music in \"happy\" countries and in \"sad\" countries.\n",
-    "\n",
-    "In our project, we will test the worthiness of these Spotify-generated scores related to happiness and explore any biases in Spotify's playlist creation algorithm. For example, according to the SDSN, the happiest country in 2020 is Finland, but the top-streamed songs in Finland are absent in Spotify's playlists to encourage happiness (eg [Mood Booster](https://open.spotify.com/playlist/37i9dQZF1DX3rxVfibe1L0?si=1ac560999d7f4489)). \n",
-    "\n",
-    "Of course, the results are not to assert that happy playlists should only include popular songs of happy countries, but to initiate conversation on the inclusivity of Spotify's selections and question the validity of how powerful organizations (such as Spotify and the SDSN) quantify happiness.\n",
-    "\n",
-    "With more than 155 million [(as of 2020)](https://www.statista.com/statistics/244995/number-of-paying-spotify-subscribers/#:~:text=How%20many%20paid%20subscribers%20does,than%20doubled%20since%20early%202017.) **paid** listeners, it is imperative that Spotify provide its them with user-centered content. \n",
-    "\n",
-    "Summary:\n",
+    "As it pertains to countries, attempting to understand what makes a country \"happy\" is often attributable to freedom, social support, life expectancy, health, among others. However, the music the people of said country listen to is often not one of these factors given its weak relationship and versatility across the world. Although our research question does not attempt to attribute the type of music a country listens to to its happiness index score (it would be difficult to establish given reverse causality), we are more interested in observing what trends are apparent in some of the happiest and less happiest countries with respect to the music they listen to. \n",
     "\n",
     "Guided by the findings of a Harvard study asserting that the human brain is \"hard-wired\" to distinguish music from noise and to respond to rhythm and repetition, \"tones, and tunes,\" we felt inspired to observe whether happy countries (as determined by the world happiness report) listen to happy music and the opposite with less happiest countries (Harvard Medical School). In particular, it is not uncommon to observe certain music genres as having more influence in the United States, despite American-born artists having great influence overseas. Genres like K-Pop and Reggaeton have gained mainstream popularity in the U.S., and are often associated with \"happier\" settings. There are interesting relationships that can also be observed with respect to countries that rank low on the happiness index yet have great influence with their music (e.g., The Dominican Republic and Honduras). \n",
     "\n",
+    "#### Some additional questions that we are seeking to answer...\n",
+    "- What songs are there (if any) that are popular in all countries regardless of happiness rank?\n",
+    "- Are there genres/styles of music that are consistent with \"happy\" countries? With \"sad\" countries? For example, can we expect happy countries to listen to more pop music than sad ones?\n",
+    "- What are the characteristics of songs that are popular in happy countries? Fast or slow tempo? Live vocals or autotune?\n",
+    "- Can we find more instances of happy songs in sad countries than sad songs in happy countries?\"\n",
     "\n",
     "#### The datasets we will be using:\n",
     "\n",
     "All the datasets were found on Kaggle.\n",
     "<br>\n",
-    "1. [\"World Happiness Report 2019\"](https://www.kaggle.com/unsdsn/world-happiness) by Sustainable Development Solutions Network\n",
+    "1. [\"World Happiness Report 2017\"](https://www.kaggle.com/unsdsn/world-happiness) by Sustainable Development Solutions Network\n",
     "<br>\n",
     "The Sustainable Development Solutions Network ranks 155 countries by their happiness levels, and calculates a \"happiness score\" for each country using six factors: economic production, social support, life expectancy, freedom, absence of corruption, and generosity. This dataset is for the year 2017.\n",
     "2. [\"Spotify's Worldwide Daily Song Ranking\"](https://www.kaggle.com/edumucelli/spotifys-worldwide-daily-song-ranking) by Kaggle user\n",
@@ -6140,7 +6130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
