restoring our stuff

--- a/Dataset-Creation.ipynb
+++ b/Dataset-Creation.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "<a id='s1'></a>\n",
     "### 1. Introduction: Why did we decide to make our own dataset?\n",
-    "#### Research Question: Is there a relationship between how happy or sad a country is and the music the people of this country listen to?\n",
+    "#### Research Question: Is there a relationship between how happy a country is and the music the people of this country listen to?\n",
     "When we first asked our main research question at the start of the semester we had planned on using this dataset on Kaggle: [Spotify's Worldwide Daily Song Ranking (2017)](https://www.kaggle.com/edumucelli/spotifys-worldwide-daily-song-ranking).\n",
     "It contains the top 200 streamed songs per day each for 54 countries (almost 4,000,000 observations!), directly taken from the [official Spotify Charts website](https://spotifycharts.com/regional). This was the only dataset that we could find containing the top songs of several countries on Spotify.<br><br>\n",
     "While we did begin to work with this Kaggle dataset, after becoming more comfortable with pandas and learning about web scraping, we decided that we could make a dataset from the charts ourselves that better suited our research question. By having access to later years' song data (not only 2017), we would be able to answer our research question with more relevant conclusions and do more statistical analyses. For example, in our final project we train a model using 2019 song data to predict a country's happiness score in 2020."
@@ -52,22 +52,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On a page on https://spotifycharts.com , Spotify allows users to select a date and a country to see a table of the \"Top 200\", a ranking of the top 200 songs by number of streams (not \"Viral 50\", which ranks songs by user-sharing). The following functions will create a pandas DataFrame by scraping the table from this webpage. Below is an image of the Spotify Charts website that exhibits the top 10 songs around the world on April 26th, 2020."
+    "On a page on https://spotifycharts.com , Spotify allows users to select a date and a country to see a table of the \"Top 200\", a ranking of the top 200 songs by number of streams (not \"Viral 50\", which ranks songs by user-sharing). The following functions will create a pandas DataFrame by scraping the table from this webpage. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!-- ![Spotify Chart img](spotify_chart.jpg) -->\n",
-    "<img src=\"spotify_chart.png\" width=\"1000\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we import necessary packages for scraping Spotify Charts: "
+    "![Spotify Chart img](spotify_chart.jpg)"
    ]
   },
   {
@@ -76,6 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#relevant imports\n",
     "import requests #package for http requests\n",
     "import bs4 #package for html parsing\n",
     "import numpy as np\n",
@@ -85,20 +78,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Below, we develop functions that we need in order to scrape Spotify Charts. \n",
-    "\n",
-    "The first function, `create_links_2019(country)`, "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#the following two functions were taken from this website. we have modified them slightly\n",
+    "# https://gist.github.com/hktosun/d4f98488cb8f005214acd12296506f48\n",
+    "\n",
     "# It creates the list of links in 2019 we will web scrape from.\n",
     "def create_links_2019(country):\n",
     "    '''\n",
@@ -113,15 +107,8 @@
     "    dates = daterange(start_date, end_date)\n",
     "    for single_date in daterange(start_date, end_date):\n",
     "        links.append('https://spotifycharts.com/regional/' + country + '/daily/' + single_date.strftime(\"%Y-%m-%d\"))\n",
-    "    return(links)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return(links)\n",
+    "\n",
     "# same as create_links_2019, but for 2020\n",
     "def create_links_2020(country):\n",
     "    '''\n",
@@ -136,15 +123,8 @@
     "    dates = daterange(start_date, end_date)\n",
     "    for single_date in daterange(start_date, end_date):\n",
     "        links.append('https://spotifycharts.com/regional/' + country + '/daily/' + single_date.strftime(\"%Y-%m-%d\"))\n",
-    "    return(links)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return(links)\n",
+    "\n",
     "def daterange(start_date, end_date):\n",
     "    '''\n",
     "    helper function for create_links_2019 and create_links_2020\n",
@@ -6594,7 +6574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
