edited limitations, fixed model.

--- a/Dataset-Creation.ipynb
+++ b/Dataset-Creation.ipynb
@@ -52,14 +52,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On a page on https://spotifycharts.com , Spotify allows users to select a date and a country to see a table of the \"Top 200\", a ranking of the top 200 songs by number of streams (not \"Viral 50\", which ranks songs by user-sharing). The following functions will create a pandas DataFrame by scraping the table from this webpage. "
+    "On a page on https://spotifycharts.com , Spotify allows users to select a date and a country to see a table of the \"Top 200\", a ranking of the top 200 songs by number of streams (not \"Viral 50\", which ranks songs by user-sharing). The following functions will create a pandas DataFrame by scraping the table from this webpage. Below is a screenshot of the Spotify Charts website that shows the top 10 songs across the world on April 26th, 2021. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Spotify Chart img](spotify_chart.jpg)"
+    "<img src=\"spotify_chart.png\" width=\"1000\">"
    ]
   },
   {
@@ -78,21 +78,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In order to access the top songs for a certain country on the Spotify Charts website, a user has to select the country from the drop-down menu, which loads a new page. The day that the user is looking at also loads a new page. Therefore, looking at a certain country's top songs for an entire year would generate around 365 links. Since we looked at 20 countries for both 2019 and 2020, we needed 365 links for 40 countries. Defining functions that created and saved these links helped simplify this process. After looping through each link for a country, we were able to get the information listed on each page that a link was connected to.\n",
+    "\n",
+    "We created the three functions below, `create_links_2019`, `create_links_2020`, and `daterange`, to get the links for each country more effectively. `daterange(start_date, end_date)` acts as a helper method to  `create_links_2019` and `create_links_2020`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When`create_links_2019` is called on a country, it returns a list of links. These links are connected to the Spotify Charts website that has the top 200 songs for a certain day. The list only contains links to the top 200 songs in a country between January 1st, 2019 and December 31st, 2019. This method was necessary since we created separate datasets for Spotify data from 2019 and Spotify data from 2020."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#the following two functions were taken from this website. we have modified them slightly\n",
-    "# https://gist.github.com/hktosun/d4f98488cb8f005214acd12296506f48\n",
-    "\n",
     "# It creates the list of links in 2019 we will web scrape from.\n",
     "def create_links_2019(country):\n",
     "    '''\n",
@@ -104,11 +110,34 @@
     "    start_date = date(2019, 1, 1)\n",
     "    end_date = date(2019,12,31)\n",
     "    links = []\n",
-    "    dates = daterange(start_date, end_date)\n",
+    "#     dates = daterange(start_date, end_date)\n",
     "    for single_date in daterange(start_date, end_date):\n",
     "        links.append('https://spotifycharts.com/regional/' + country + '/daily/' + single_date.strftime(\"%Y-%m-%d\"))\n",
-    "    return(links)\n",
-    "\n",
+    "    return(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_links_2019()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When`create_links_2020` is called on a country, it does the exact same thing as `create_links_2019` except that the returned list only contains links to the top 200 songs in a country between January 1st, 2020 and December 31st, 2020. This method was called only when we were creating the Spotify dataset that only contained information regarding what music countries in 2020 listened to."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# same as create_links_2019, but for 2020\n",
     "def create_links_2020(country):\n",
     "    '''\n",
@@ -123,8 +152,22 @@
     "    dates = daterange(start_date, end_date)\n",
     "    for single_date in daterange(start_date, end_date):\n",
     "        links.append('https://spotifycharts.com/regional/' + country + '/daily/' + single_date.strftime(\"%Y-%m-%d\"))\n",
-    "    return(links)\n",
-    "\n",
+    "    return(links)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`daterange(start_date, end_date)` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def daterange(start_date, end_date):\n",
     "    '''\n",
     "    helper function for create_links_2019 and create_links_2020\n",
@@ -6574,7 +6617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
